objects/Castlight_Engage_Client_Information_Form__c.object
<CustomObject>
    <fields>
        <fullName>Anthem_Dental_Eligible_Population__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>EXAMPLES: entire group, package codes ABC, LMN, contract codes 123, 678</inlineHelpText>
        <label>Anthem Dental Eligible Population</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anthem_Dental_Integration_Requirements__c</fullName>
        <formula>&quot;Dental Integration Requirements:&quot; &amp; BR() &amp;
&quot;If client has Anthem dental, they MUST meet the following requirements to be eligible for Engage integration of dental products:&quot; &amp; BR() &amp;
&quot;-Client must be administratively integrated (1 HCID shared with medical and dental)&quot;&amp; BR() &amp;
&quot;-Client must be on WGS or NASCO, with membership on WGS or NASCO&quot;&amp; BR() &amp;
&quot;-Client must have the following products: Prime, Complete, Anthem Dental Essential Choice (all 14 states) or Anthem Dental Consumer Choice (CA, IN, OH only).&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Dental Integration Requirements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anthem Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Castlight_Behavioral_Health_Buy_up__c</fullName>
        <label>Castlight Behavioral Health Buy up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BH Carve in and EAP Carve in (EE)</fullName>
                </value>
                <value>
                    <fullName>BH Carve out and EAP Carve out (E2)</fullName>
                </value>
                <value>
                    <fullName>BH Carve in and EAP Carve out (E3)</fullName>
                </value>
                <value>
                    <fullName>BH Carve out and EAP Carve out (E4)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Quote_Name__r.Claim_System__c</formula>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Currently_Using_CCF_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Care And Cost Finder</inlineHelpText>
        <label>Client Currently Using CCF (Plus)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Currently_Using_CCF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Care and Cost Finder</inlineHelpText>
        <label>Client Currently Using CCF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Currently_Using_EYC_FAD_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Estimate Your Cost &amp; Find A Doctor</inlineHelpText>
        <label>Client Currently Using EYC &amp; FAD (Plus)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Currently_Using_EYC_and_FAD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Estimate Your Cost &amp; Find A Doctor</inlineHelpText>
        <label>Client Currently Using EYC and FAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Quote_Name__c, Quote_Name__r.Account_Name__c,&quot;_blank&quot;)</formula>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Termination_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Termination Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_With_QUALIFIED_Anthem_Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Account Team: selecting this option acts as confirmation that the account satisfies the Dental Integration Reqs below. Accounts NOT meeting these reqs should not have this option selected.</inlineHelpText>
        <label>Client With QUALIFIED Anthem Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_with_Anthem_RX_Elite_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(ESI Notification Required)</inlineHelpText>
        <label>Client with Anthem RX (Elite Plus)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_with_Anthem_RX__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(ESI notification required)</inlineHelpText>
        <label>Client with Anthem RX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>Name + &quot; - &quot; + Group_Number__c + &quot; - &quot; + Quote_Name__r.Opportunity.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engage_Elevate_Eligible_Population__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>EXAMPLES: entire group, package codes ABC, LMN, contract codes 123, 678</inlineHelpText>
        <label>Engage Elevate Eligible Population</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engage_Elevate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Elevate is a fully integrated Behavioral Health buy up solution offered through Castlight Health.  Elevate makes it easier for employees to access the personalized care they need while driving down costly behavioral health expenses.</inlineHelpText>
        <label>Engage Elevate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engage_Elite_Eligible_Population__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>EXAMPLES: entire group, package codes ABC, LMN, contract codes 123, 678</inlineHelpText>
        <label>Engage Elite Eligible Population</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engage_Elite_Plus_Eligible_Population__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>EXAMPLES: Entire Group, Package Codes ABC, LMN, Contract Codes 123, 678</inlineHelpText>
        <label>Engage Elite Plus Eligible Population</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engage_Elite_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Include Medical And RX (If Applicable)</inlineHelpText>
        <label>Engage Elite Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engage_Elite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Include medical and RX (if applicable)</inlineHelpText>
        <label>Engage Elite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engage_Essential_Eligible_Population__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>EXAMPLES: entire group, package codes ABC, LMN, contract codes 123, 678</inlineHelpText>
        <label>Engage Essentials Eligible Population</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engage_Essential__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Essential is not offered as a standalone product.  Client must have Engage Elite to be eligible for Essential. For Essential, please clarify client’s current transparency experience</inlineHelpText>
        <label>Engage Essentials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engage_Essentials_Plus_Elig_Population__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>EXAMPLES: Entire Group, Package Codes ABC, LMN, Contract Codes 123, 678</inlineHelpText>
        <label>Engage Essentials Plus Elig Population</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engage_Essentials_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Essentials Plus Is Not Offered As A Standalone Product. Client Must Have Engage Elite To Be Eligible For Essentials.</inlineHelpText>
        <label>Engage Essentials Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Client_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Existing Client Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Client_Implementation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Client Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>Quote_Name__r.GroupNumber__r.Name</formula>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Buy_Up_Eligible_Population__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>EXAMPLES: entire group, package codes ABC, LMN, contract codes 123, 678</inlineHelpText>
        <label>Medical Buy Up Eligible Population</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Client_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Client Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Client_Implementation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Client Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Castlight Engage Client Information Form</relationshipLabel>
        <relationshipName>Castlight_Engage_Client_Information_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RBB_Eligible_Population__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>EXAMPLES: entire group, package codes ABC, LMN, contract codes 123, 678</inlineHelpText>
        <label>RBB Eligible Population</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Based_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please also complete RBB selection worksheet.  Only available for current RBB clients</inlineHelpText>
        <label>Reference Based Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terming_Castlight_Legacy_For_Engage__c</fullName>
        <label>Terming Castlight Legacy For Engage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traditional_Legacy_Medical_Buy_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Legacy Castlight is only offered to non Engage clients on legacy platform. All WGS clients should be quoted for Engage.</inlineHelpText>
        <label>Traditional/Legacy Medical Buy Up</label>
        <type>Checkbox</type>
    </fields>
    <label>Castlight Engage Client Information Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>New_Client_Implementation__c</columns>
        <columns>Existing_Client_Implementation__c</columns>
        <columns>Client_Termination__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Engage_Elite__c</columns>
        <columns>Engage_Essential__c</columns>
        <columns>Anthem_Dental__c</columns>
        <columns>Engage_Elevate__c</columns>
        <columns>Reference_Based_Benefits__c</columns>
        <columns>Traditional_Legacy_Medical_Buy_Up__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CIF-{0000}</displayFormat>
        <label>CIF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Castlight Engage Client Information Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>